Upgrade to Tailwind v2

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -1,6 +1,6 @@
-/* purgecss start ignore */
 @import "tailwindcss/base";
+@import "./fontface.css";
+
 @import "tailwindcss/components";
-/* purgecss end ignore */
 
 @import "tailwindcss/utilities";
